Design: Add Euid App UI main - exchange(기기 거래) 페이지 CSS 초안
메인 페이지 -서브 페이지들 중 기기 거래 페이지 CSS 초안입니다.
Floating Button도 적용하였습니다.

fixes: 추후 요구 사항반영 및 자바스크립트 적용으로 구조 변경 가능성 있음

--- a/client/css/tailwind.css
+++ b/client/css/tailwind.css
@@ -4,6 +4,17 @@
 @tailwind components;
 @tailwind utilities;
 
+/* src/styles.css */
+@layer components {
+  .plusButton:hover + .exchangeWrite {
+    visibility: visible;
+    opacity: 1;
+  }
+  .plusButton:hover span {
+    color: black !important;
+  }
+}
+
 @layer utilities {
   .a11yHidden,
   legend {
@@ -32,6 +43,10 @@
       'Segoe UI Symbol',
       sans-serif;
     font: inherit;
+  }
+  main {
+    position: relative;
+    width: 320px;
   }
   /*.sprite {
     display: inline-block;
