--- a/client/css/main.css
+++ b/client/css/main.css
@@ -534,6 +534,19 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.plusButton:hover + .exchangeWrite {
+  visibility: visible;
+  opacity: 1;
+}
+
+.plusButton:hover span {
+  color: black !important;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
 .fixed {
   position: fixed;
 }
@@ -552,6 +565,22 @@ video {
 
 .bottom-0 {
   bottom: 0px;
+}
+
+.bottom-\[145px\] {
+  bottom: 145px;
+}
+
+.bottom-\[5px\] {
+  bottom: 5px;
+}
+
+.bottom-\[70px\] {
+  bottom: 70px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .left-\[1\.875rem\] {
@@ -574,6 +603,22 @@ video {
   right: 0px;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-2\.5 {
+  right: 0.625rem;
+}
+
+.right-\[110px\] {
+  right: 110px;
+}
+
+.right-\[20px\] {
+  right: 20px;
+}
+
 .top-\[0\.1875rem\] {
   top: 0.1875rem;
 }
@@ -592,6 +637,86 @@ video {
 
 .top-\[85px\] {
   top: 85px;
+}
+
+.right-\[10px\] {
+  right: 10px;
+}
+
+.bottom-\[100px\] {
+  bottom: 100px;
+}
+
+.right-\[15px\] {
+  right: 15px;
+}
+
+.bottom-\[150px\] {
+  bottom: 150px;
+}
+
+.bottom-\[140px\] {
+  bottom: 140px;
+}
+
+.bottom-\[130px\] {
+  bottom: 130px;
+}
+
+.bottom-\[10px\] {
+  bottom: 10px;
+}
+
+.right-\[90px\] {
+  right: 90px;
+}
+
+.right-\[70px\] {
+  right: 70px;
+}
+
+.right-\[55px\] {
+  right: 55px;
+}
+
+.right-\[40px\] {
+  right: 40px;
+}
+
+.right-\[45px\] {
+  right: 45px;
+}
+
+.right-\[50px\] {
+  right: 50px;
+}
+
+.right-\[17px\] {
+  right: 17px;
+}
+
+.bottom-\[160px\] {
+  bottom: 160px;
+}
+
+.right-\[30px\] {
+  right: 30px;
+}
+
+.right-\[60px\] {
+  right: 60px;
+}
+
+.bottom-\[110px\] {
+  bottom: 110px;
+}
+
+.bottom-\[95px\] {
+  bottom: 95px;
+}
+
+.bottom-\[85px\] {
+  bottom: 85px;
 }
 
 .z-10 {
@@ -615,6 +740,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
+}
+
 .mb-\[3\.75rem\] {
   margin-bottom: 3.75rem;
 }
@@ -625,6 +754,10 @@ video {
 
 .ml-\[5px\] {
   margin-left: 5px;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .mt-0 {
@@ -643,6 +776,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -651,20 +788,16 @@ video {
   display: flex;
 }
 
-.inline-flex {
-  display: inline-flex;
-}
-
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
 }
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .h-5 {
@@ -699,28 +832,20 @@ video {
   height: 693px;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-\[32\.6875rem\] {
-  height: 32.6875rem;
-}
-
-.h-\[calc\(100\%_-_351px\)\] {
-  height: calc(100% - 351px);
+.h-\[90px\] {
+  height: 90px;
 }
 
 .h-\[calc\(100\%_-_350px\)\] {
   height: calc(100% - 350px);
+}
+
+.h-auto {
+  height: auto;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-4\/5 {
@@ -731,8 +856,16 @@ video {
   width: 1.25rem;
 }
 
+.w-\[108px\] {
+  width: 108px;
+}
+
 .w-\[13\.75rem\] {
   width: 13.75rem;
+}
+
+.w-\[138px\] {
+  width: 138px;
 }
 
 .w-\[25px\] {
@@ -759,36 +892,24 @@ video {
   width: 9.1875rem;
 }
 
+.w-\[90px\] {
+  width: 90px;
+}
+
 .w-\[\] {
   width: ;
-}
-
-.w-\[calc\(100\%_-_24px\)\] {
-  width: calc(100% - 24px);
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-4 {
-  width: 1rem;
 }
 
 .w-\[calc\(100\%_-_1\.5rem\)\] {
   width: calc(100% - 1.5rem);
 }
 
-.w-1\/2 {
-  width: 50%;
+.w-full {
+  width: 100%;
 }
 
-.w-\[138px\] {
-  width: 138px;
+.w-\[105px\] {
+  width: 105px;
 }
 
 .max-w-full {
@@ -807,6 +928,26 @@ video {
   flex-grow: 1;
 }
 
+.translate-x-0 {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-0\.5 {
+  --tw-translate-x: 0.125rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-2 {
+  --tw-translate-y: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-2\.5 {
+  --tw-translate-y: 0.625rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -817,20 +958,16 @@ video {
           appearance: none;
 }
 
-.grid-cols-\[repeat\(2\2c 1fr\)\] {
-  grid-template-columns: repeat(2,1fr);
-}
-
-.grid-rows-\[auto\] {
-  grid-template-rows: auto;
-}
-
 .flex-col {
   flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 
 .items-start {
@@ -865,6 +1002,10 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -873,48 +1014,16 @@ video {
   gap: 0.75rem;
 }
 
-.gap-\[3px\] {
-  gap: 3px;
-}
-
-.gap-\[2px\] {
-  gap: 2px;
-}
-
-.gap-\[1px\] {
-  gap: 1px;
+.gap-4 {
+  gap: 1rem;
 }
 
 .gap-\[0\.1875rem\] {
   gap: 0.1875rem;
 }
 
-.gap-\[0\.75rem\] {
-  gap: 0.75rem;
-}
-
-.gap-\[0\.5rem\] {
-  gap: 0.5rem;
-}
-
-.gap-\[0\.25rem\] {
-  gap: 0.25rem;
-}
-
-.gap-\[0\.2rem\] {
-  gap: 0.2rem;
-}
-
-.gap-\[0\.1rem\] {
-  gap: 0.1rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-4 {
-  gap: 1rem;
+.gap-\[3px\] {
+  gap: 3px;
 }
 
 .gap-x-2 {
@@ -922,17 +1031,24 @@ video {
        column-gap: 0.5rem;
 }
 
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-y-0 {
-  row-gap: 0px;
-}
-
 .overflow-auto {
   overflow: auto;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
+.rounded-\[0\.3125rem\] {
+  border-radius: 0.3125rem;
+}
+
+.rounded-\[50\%\] {
+  border-radius: 50%;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .rounded-t-lg {
@@ -940,16 +1056,16 @@ video {
   border-top-right-radius: 0.5rem;
 }
 
-.border-0 {
-  border-width: 0px;
-}
-
 .border {
   border-width: 1px;
 }
 
-.border-t {
-  border-top-width: 1px;
+.border-0 {
+  border-width: 0px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-t-0 {
@@ -960,14 +1076,18 @@ video {
   border-style: solid;
 }
 
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+.border-\[none\] {
+  border-color: none;
 }
 
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#bdbdbd\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(189 189 189 / var(--tw-border-opacity));
 }
 
 .border-t-\[rgb\(214\2c 214\2c 214\)\] {
@@ -980,7 +1100,17 @@ video {
   background-color: rgb(55 63 103 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#719cf7\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 156 247 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#9DA1B4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(157 161 180 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#9da1b4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(157 161 180 / var(--tw-bg-opacity));
 }
@@ -1005,24 +1135,12 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[-4px-74px\] {
-  background-color: -4px-74px;
+.bg-\[-238px-8px\] {
+  background-color: -238px-8px;
 }
 
-.bg-\[-4px-4px\] {
-  background-color: -4px-4px;
-}
-
-.bg-\[-4px-104px\] {
-  background-color: -4px-104px;
-}
-
-.bg-\[-84px-91px\] {
-  background-color: -84px-91px;
-}
-
-.bg-\[-99x_-46px\] {
-  background-color: -99x -46px;
+.bg-\[\] {
+  background-color: ;
 }
 
 .bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/hamburger\.svg\'\)\] {
@@ -1031,6 +1149,10 @@ video {
 
 .bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/sprite\.svg\'\)\] {
   background-image: url('./../../assets/icons/Icon/sprite.svg');
+}
+
+.bg-\[-106px_-91px\] {
+  background-position: -106px -91px;
 }
 
 .bg-\[-121px_-7px\] {
@@ -1045,6 +1167,10 @@ video {
   background-position: -155px -70px;
 }
 
+.bg-\[-190px_-85px\] {
+  background-position: -190px -85px;
+}
+
 .bg-\[-196px_-8px\] {
   background-position: -196px -8px;
 }
@@ -1053,128 +1179,54 @@ video {
   background-position: -269px -116px;
 }
 
-.bg-\[-95px_-8px\] {
-  background-position: -95px -8px;
-}
-
-.bg-\[-4px_-74px\] {
-  background-position: -4px -74px;
-}
-
-.bg-\[-5px_-74px\] {
-  background-position: -5px -74px;
-}
-
-.bg-\[-6px_-74px\] {
-  background-position: -6px -74px;
-}
-
-.bg-\[-10px_-74px\] {
-  background-position: -10px -74px;
-}
-
-.bg-\[-12px_-74px\] {
-  background-position: -12px -74px;
-}
-
-.bg-\[-3px_-74px\] {
-  background-position: -3px -74px;
-}
-
-.bg-\[-2px_-74px\] {
-  background-position: -2px -74px;
-}
-
-.bg-\[-1px_-74px\] {
-  background-position: -1px -74px;
-}
-
-.bg-\[-1px_-70px\] {
-  background-position: -1px -70px;
-}
-
-.bg-\[-1px_-65px\] {
-  background-position: -1px -65px;
-}
-
-.bg-\[-1px_-60px\] {
-  background-position: -1px -60px;
-}
-
-.bg-\[-1px_-55px\] {
-  background-position: -1px -55px;
-}
-
-.bg-\[-1px_-50px\] {
-  background-position: -1px -50px;
-}
-
-.bg-\[-78px_-46px\] {
-  background-position: -78px -46px;
-}
-
-.bg-\[-80px_-46px\] {
-  background-position: -80px -46px;
-}
-
-.bg-\[-85px_-46px\] {
-  background-position: -85px -46px;
-}
-
-.bg-\[-75px_-46px\] {
-  background-position: -75px -46px;
-}
-
-.bg-\[-106px_-90px\] {
-  background-position: -106px -90px;
-}
-
-.bg-\[-106px_-88px\] {
-  background-position: -106px -88px;
-}
-
-.bg-\[-106px_-86px\] {
-  background-position: -106px -86px;
-}
-
-.bg-\[-106px_-91px\] {
-  background-position: -106px -91px;
-}
-
-.bg-\[-106px_-92px\] {
-  background-position: -106px -92px;
-}
-
-.bg-\[0px_-74px\] {
-  background-position: 0px -74px;
-}
-
-.bg-\[-73px_-46px\] {
-  background-position: -73px -46px;
+.bg-\[-51px_-73px\] {
+  background-position: -51px -73px;
 }
 
 .bg-\[-72px_-46px\] {
   background-position: -72px -46px;
 }
 
-.bg-\[-51px_-73px\] {
-  background-position: -51px -73px;
-}
-
-.bg-\[-101px_-46px\] {
-  background-position: -101px -46px;
-}
-
-.bg-\[-100px_-46px\] {
-  background-position: -100px -46px;
+.bg-\[-95px_-8px\] {
+  background-position: -95px -8px;
 }
 
 .bg-\[-99px_-46px\] {
   background-position: -99px -46px;
 }
 
+.bg-\[0px_-74px\] {
+  background-position: 0px -74px;
+}
+
+.bg-\[-238px_-8px\] {
+  background-position: -238px -8px;
+}
+
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-2\.5 {
+  padding: 0.625rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
 }
 
 .px-2 {
@@ -1190,6 +1242,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-\[0\.8125rem\] {
@@ -1217,17 +1274,20 @@ video {
   padding-bottom: 0.625rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
+.pl-0 {
+  padding-left: 0px;
+}
+
+.pl-0\.5 {
+  padding-left: 0.125rem;
 }
 
 .pl-2 {
@@ -1238,28 +1298,52 @@ video {
   padding-left: 0.625rem;
 }
 
+.pr-1 {
+  padding-right: 0.25rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .pt-0 {
   padding-top: 0px;
+}
+
+.pt-0\.5 {
+  padding-top: 0.125rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
   text-align: center;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
+.text-\[0\.625rem\] {
+  font-size: 0.625rem;
+}
+
 .text-\[0\.6875rem\] {
   font-size: 0.6875rem;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
 }
 
 .text-\[11\.5px\] {
@@ -1270,6 +1354,10 @@ video {
   font-size: 11px;
 }
 
+.text-\[2rem\] {
+  font-size: 2rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1278,6 +1366,14 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
 }
 
 .font-bold {
@@ -1296,6 +1392,14 @@ video {
   font-weight: 600;
 }
 
+.font-\[14px\] {
+  font-weight: 14px;
+}
+
+.leading-\[1\.6\] {
+  line-height: 1.6;
+}
+
 .leading-\[normal\] {
   line-height: normal;
 }
@@ -1306,6 +1410,11 @@ video {
 
 .leading-normal {
   line-height: 1.5;
+}
+
+.text-\[\#9da184\] {
+  --tw-text-opacity: 1;
+  color: rgb(157 161 132 / var(--tw-text-opacity));
 }
 
 .text-\[\#a7a7a7\] {
@@ -1334,6 +1443,12 @@ video {
 
 .opacity-0 {
   opacity: 0;
+}
+
+.shadow-\[0px_4px_4px_0px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
+  --tw-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+  --tw-shadow-colored: 0px 4px 4px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-md {
@@ -1391,6 +1506,11 @@ body {
   font: inherit;
 }
 
+main {
+  position: relative;
+  width: 320px;
+}
+
 /*.sprite {
     display: inline-block;
     background-image: url('./../../assets/icons/Icon/sprite.svg');
@@ -1403,6 +1523,8 @@ body {
     margin-left: 5px;
     background-position: -155px -70px;
   }*/
+
+/* src/styles.css */
 
 .before\:absolute::before {
   content: var(--tw-content);
@@ -1442,4 +1564,20 @@ body {
 .before\:content-\[\'\'\]::before {
   --tw-content: '';
   content: var(--tw-content);
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:text-\[black\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:shadow-\[2px_4px_4px_2px_rgba\(0\2c 0\2c 0\2c 0\.25\)\]:hover {
+  --tw-shadow: 2px 4px 4px 2px rgba(0,0,0,0.25);
+  --tw-shadow-colored: 2px 4px 4px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
