--- a/client/views/main/search.html
+++ b/client/views/main/search.html
@@ -10,11 +10,12 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/static/pretendard-dynamic-subset.css"
     />
-    <link rel="stylesheet" href="/style/index.css" />
+    <link rel="stylesheet" href="./../../css/main.css" />
   </head>
 
   <body>
     <h1 class="a11yHidden">엔터이듬</h1>
+
     <header class="mainHeader searchHeader">
       <h2 class="a11yHidden">기본 정보</h2>
       <div class="timeWrapper">
@@ -35,6 +36,7 @@
         </ul>
       </div>
     </header>
+
     <main>
       <form action="/" class="searchWrapper">
         <fieldset>
