Design: Add Euid App UI main - exchange(기기 거래) 페이지 CSS 수정
    메인 페이지 -서브 페이지들 중 기기 거래 페이지 CSS 일부 변경입니다.
    헤더 부분 일부 Class변경 및 search 페이지 href 추가했습니다.

    fixes: 추후 요구 사항반영 및 자바스크립트 적용으로 구조 변경 가능성 있음

--- a/client/views/main/exchange.html
+++ b/client/views/main/exchange.html
@@ -68,7 +68,7 @@
           <li class="w-[25px] h-[25px] pl-2.5">
             <a
               class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[5px] mt-1"
-              href="/"
+              href="./search.html"
               aria-label="검색"
               tabindex="0"
             ></a>
