Markup: board 파트 index.html 마크업 구조  일부 변경 및 base 스타일 적용
UI 시안에 따른 base 스타일 적용과 요구 기능 재분석으로 마크업 구조 일부 변경 완료

Fixes: 추후 요구사항 재반영 및 디테일 수정으로 인해 변동 가능성 농후w

--- a/client/css/board.css
+++ b/client/css/board.css
@@ -10,9 +10,22 @@ header {
   @apply fixed top-0 inset-x-0;
   /* width: 100% */
 }
-
 .change {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  @apply text-[#9DA1B4];
+  @apply text-[0.625rem] font-[400px];
+  @apply pt-2 pb-6 px-3;
+  @apply text-white bg-[#c4c7d2] rounded text-[0.625rem] px-1 py-0;
+  /* 같이해요 같은 버튼 스타일링 */
+  @apply text-lg font-bold inline-block;
+  @apply box-border;
+  @apply p-3;
+  @apply relative absolute -translate-x-2/4 -translate-y-2/4 max-w-full max-h-full left-2/4 top-2/4;
+  @apply rounded-[5px];
+  @apply absolute -translate-y-2/4 top-2/4;
+  @apply align-middle;
+  @apply ml-auto mr-0 mt-auto mb-0;
+  @apply block;
+  @apply w-[190px];
+  @apply w-[60px] h-[60px];
+  @apply whitespace-nowrap overflow-hidden text-ellipsis;
 }
