--- a/client/views/board/index.html
+++ b/client/views/board/index.html
@@ -48,7 +48,7 @@
             <li>
               <form action="#">
                 <label for="town"></label>
-                <select class="appearance-none" name="townSelect" id="town" size="1">
+                <select class="appearance-none text-lg font-bold inline-block" name="townSelect" id="town" size="1">
                   <option value="town1">남가좌제2동</option>
                   <option value="town2">신내동</option>
                   <option value="town3">다산신도시</option>
@@ -99,87 +99,91 @@
         </div>
       </header>
         <div class="boardWrap bg-purple-700 pt-[5.625rem]">
-          <section class="boardSection flex justify-between items-stretch flex-nowrap flex-row">
-            <div class="boardContainer">
+          <section class="boardSection box-border p-3 flex justify-between items-stretch flex-nowrap flex-row">
+            <div class="boardContainer w-[190px]">
               <span class="boardLabel">같이해요</span>
-              <h3><a href="#">youtube 클론 프젝 같이 하실분~!</a></h3>
-              <p class="boardPeople">
+              <h3 class=" whitespace-nowrap overflow-hidden text-ellipsis block"><a href="#">youtube 클론 프젝 같이 하실분~!</a></h3>
+              <p class="boardPeople text-[#9DA1B4] text-[0.625rem] font-[400]">
                 <span class="boardHumanSprite" aria-hidden="true"></span>
                 누구나 참여가능
               </p>
-              <p>
+              <p class="text-[#9DA1B4] text-[0.625rem] font-[400]">
                 <span class="calenderSprite" aria-hidden="true"></span>
                 내일, 오후 7:00
               </p>
-              <p>응암제 3동 • 9분 전</p>
+              <p class="text-[#9DA1B4] text-[0.625rem] font-[400]">응암제 3동 • 9분 전</p>
             </div>
-            <p class="boardCoutner">
+            <p class="boardCounter ml-auto mr-0 mt-auto mb-0 text-[#9DA1B4] text-[0.625rem] font-[400]">
               <span class="counterSprite" aria-hidden="true"></span>
               1/3명
             </p>
           </section>
+         
 
-          <section class="boardSection flex justify-between items-stretch flex-nowrap flex-row">
-            <div class="boardContainer">
+          <section class="boardSection box-border p-3 flex justify-between items-stretch flex-nowrap flex-row">
+            <div class="boardContainer w-[190px]">
               <span class="boardLabel">질의응답</span>
-              <h3><a href="#">아니 디버깅 돌려봤는데도 왜 이렇게 나오는거죠 대체</a></h3>
-              <p>
+              <h3 class="whitespace-nowrap overflow-hidden text-ellipsis block"><a href="#">아니 디버깅 돌려봤는데도 왜 이렇게 나오는거죠 대체</a></h3>
+              <p class="whitespace-nowrap overflow-hidden text-ellipsis block">
                 내가 혼자 게임 만들려고 코드 짰는ㄷ ㅔ 왜 이런거야 도대체 알수가없네
                 수가없네수가없네수가없네수가없네수가없네수가없네수가없네수가없네수가없네수가없네수가없네
               </p>
-              <p>연희동 • 49분 전 • 조회 4</p>
-              <img src="./../images/board/thumbnail.png" alt="미리보기 사진" />
+              <p class="text-[#9DA1B4] text-[0.625rem] font-[400]">연희동 • 49분 전 • 조회 4</p>
             </div>
+            <p class="w-[60px] h-[60px] rounded-[5px] relative bg-green-400 inine-block "><img src="/" class="absolute -translate-x-2/4 -translate-y-2/4 max-w-full max-h-full left-2/4 top-2/4" alt="미리보기 사진" /></p>
           </section>
 
-          <section class="boardSection flex justify-between items-stretch flex-nowrap flex-row">
-            <div class="boardContainer">
+          <section class="boardSection box-border p-3 flex justify-between items-stretch flex-nowrap flex-row">
+            <div class="boardContainer w-[190px]">
               <span class="boardLabel">질의응답</span>
-              <h3><a href="#">CSS flex 중앙정렬 justify-content 말고 또 뭐있더라?</a></h3>
-              <p>
-                 figma보고 코드 짰는데 기억이 안나네;;;;
+              <h3 class="whitespace-nowrap overflow-hidden text-ellipsis block"><a href="#">깊은 복사 얕은 복사의 차이를 모르곘어요 ㅠㅠ</a></h3>
+              <p class="whitespace-nowrap overflow-hidden text-ellipsis block">
+                제가 이해한 내용은 얕은 복사는 메모리를 공유하는 거 잖아요? 
               </p>
-              <p>남가좌동 • 15분 전 • 조회 12</p>
+              <p class="text-[#9DA1B4] text-[0.625rem] font-[400]">남가좌동 • 15분 전 • 조회 12</p>
+              
             </div>
           </section>
 
-          <section class="boardSection flex justify-between items-stretch flex-nowrap flex-row">
-            <div class="boardContainer">
+          <section class="boardSection box-border p-3 flex justify-between items-stretch flex-nowrap flex-row">
+            <div class="boardContainer w-[190px]">
               <span class="boardLabel">질의응답</span>
-              <h3><a href="#">CSS flex 중앙정렬 justify-content에서 뭐 줘야해요?</a></h3>
-              <p>figma보고 코드 짰는데 기억이 안나네;;;;</p>
-              <p>남가좌제2동 • 1일 전 • 조회 13</p>
+              <h3 class="whitespace-nowrap overflow-hidden text-ellipsis block"><a href="#">CSS flex 중앙정렬 justify-content에서 뭐 줘야해요?</a></h3>
+              <p class="whitespace-nowrap overflow-hidden text-ellipsis block">figma보고 코드 짰는데 기억이 안나네;;;;</p>
+              <p class="text-[#9DA1B4] text-[0.625rem] font-[400]">남가좌제2동 • 1일 전 • 조회 13</p>
             </div>
+            <p class=""></p>
           </section>
 
-          <section class="boardSection flex justify-between items-stretch flex-nowrap flex-row">
-            <div class="boardContainer">
+          <section class="boardSection box-border p-3 flex justify-between items-stretch flex-nowrap flex-row">
+            <div class="boardContainer w-[190px]">
               <span class="boardLabel">자유게시판</span>
-              <h3><a href="#">오늘 점심 뭐먹? 점메추~~~</a></h3>
-              <p>코드 공부하다 연희동 근처에서 밥먹을건데 밥은 님이 사주셔야합니다</p>
-              <p>연희동 • 49분 전 • 조회 4</p>
-              <img src="./../images/board/thumbnail.png" alt="미리보기 사진" />
+              <h3 class="whitespace-nowrap overflow-hidden text-ellipsis block"><a href="#">오늘 점심 뭐먹? 점메추~~~</a></h3>
+              <p class="whitespace-nowrap overflow-hidden text-ellipsis block">코드 공부하다 연희동 근처에서 밥먹을건데 밥은 님이 사주셔야합니다</p>
+              <p class="text-[#9DA1B4] text-[0.625rem] font-[400]">연희동 • 49분 전 • 조회 4</p>
             </div>
+            <p class="w-[60px] h-[60px] rounded-[5px] relative bg-green-400 inine-block "><img src="/" class="absolute -translate-x-2/4 -translate-y-2/4 max-w-full max-h-full left-2/4 top-2/4"  alt="미리보기 사진" /></p>
           </section>
 
-          <section class="boardSection flex justify-between items-stretch flex-nowrap flex-row">
-            <div class="boardContainer">
+          <section class="boardSection box-border p-3 flex justify-between items-stretch flex-nowrap flex-row">
+            <div class="boardContainer w-[190px]">
               <span class="boardLabel">자유게시판</span>
-              <h3><a href="#">짜증을 내어서 무얼하나 ~ </a></h3>
-              <p>열심히 해야지 모 방법 있겠냐구</p>
+              <h3 class="whitespace-nowrap overflow-hidden text-ellipsis block"><a href="#">짜증을 내어서 무얼하나 ~~~~ </a></h3>
+              <p class="whitespace-nowrap overflow-hidden text-ellipsis block">열심히 해야지 모 방법 있겠냐구 화이팅 슈퍼 샤이</p>
               <p>연희동 • 49분 전 • 조회 4</p>
-              <img src="./../images/board/thumbnail.png" alt="미리보기 사진" />
             </div>
+            <p class="w-[60px] h-[60px] rounded-[5px] relative bg-green-400 inine-block "><img src="/" class="absolute -translate-x-2/4 -translate-y-2/4 max-w-full max-h-full left-2/4 top-2/4"  alt="미리보기 사진" /></p>
           </section>
         </div>
 
-        <footer class="footer fixed bottom-0 inset-x-0 bg-pink-300">
-          <div class="footerWrap">
-            <button class="buttonHome">홈</button>
-            <button class="buttonBoard">게시판</button>
-            <button class="buttonLocation">내주변</button>
-            <button class="buttonChat">채팅</button>
-            <button class="buttonMy">나의 이듬</button>
+        <footer class="footer h-[37px] fixed bottom-0 inset-x-0 bg-pink-300 pt-2 pb-6 px-3 box-border"
+        >
+          <div class="footerWrap flex items-stretch flex-nowrap flex-row justify-between">
+            <button class="buttonHome w-[20px] h-[37px]"><img src="/" alt="/" />홈</button>
+            <button class="buttonBoard w-[20px] h-[37px]"><img src="/" alt="/" />게시판</button>
+            <button class="buttonLocation w-[20px] h-[37px]"><img src="/" alt="/" />내주변</button>
+            <button class="buttonChat w-[20px] h-[37px]"><img src="/" alt="/" />채팅</button>
+            <button class="buttonMy w-[20px] h-[37px]"><img src="/" alt="/" />나의 이듬</button>
           </div>
         </footer>
       </main>
