Design: Add Euid App UI main - 검색 페이지 CSS 초안
    메인 페이지 - 서브 페이지들 중 검색 페이지 CSS 초안입니다.
    키보드는 이미지를 이용했으며, 현재 완료버튼에만 접근이 가능한 문제가 있는 상황입니다. 시간 관계상 추후에 수정하겠습니다.

    fixes: 추후 요구사항 반영 및 자바스크립트 적용으로 구조 변경 가능성 있음

--- a/client/views/main/search.html
+++ b/client/views/main/search.html
@@ -16,21 +16,27 @@
   <body>
     <h1 class="a11yHidden">엔터이듬</h1>
 
-    <header class="mainHeader searchHeader">
+    <header>
       <h2 class="a11yHidden">기본 정보</h2>
-      <div class="timeWrapper">
-        <time class="timeInfo" datetime="2023-06-25T02:26">2:26</time>
-        <ul class="cellInfo">
+      <div class="flex justify-between items-center pt-2 px-4">
+        <time class="inline-block text-sm font-semibold" datetime="2023-06-25T02:26">2:26</time>
+        <ul class="flex justify-start items-start border-0">
           <li class="cellItem">
-            <span class="sprite spriteSensitivity"></span>
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
+            ></span>
             <span class="a11yHidden">수신감도</span>
           </li>
           <li class="cellItem">
-            <span class="sprite spriteLte"></span>
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+            ></span>
             <span class="a11yHidden">데이터 종류</span>
           </li>
           <li class="cellItem">
-            <span class="sprite spriteBattery"></span>
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
+            ></span>
             <span class="a11yHidden">배터리 잔량</span>
           </li>
         </ul>
@@ -38,38 +44,92 @@
     </header>
 
     <main>
-      <form action="/" class="searchWrapper">
-        <fieldset>
-          <legend>검색 폼</legend>
-          <label for="search">
-            <span class="sprite spriteBack searchHeaderBack"></span
-            ><span class="a11yHidden">검색</span>
-          </label>
-          <input type="search" id="search" class="searchInput" placeholder="창천동 근처에서 검색" />
-        </fieldset>
-      </form>
-      <div class="searchContent">
+      <div class="pt-2 pb-3 px-4 flex justify-between items-center w-full z-10">
+        <div class="flex-shrink-0 mt-2">
+          <span
+            ><a
+              class="inline-block bg-[url('./../../assets/icons/Icon/dircetionLeft.svg')] bg-no-repeat w-[18px] h-[18px]"
+              href="javascript:history.back()"
+            ></a
+          ></span>
+        </div>
+        <form action="/" class="ml-3 mr-1 mt-1 w-full flex-grow">
+          <fieldset class="max-w-full">
+            <legend>검색 폼</legend>
+            <label for="search">
+              <span class="sprite spriteBack searchHeaderBack"></span
+              ><span class="a11yHidden">검색</span>
+            </label>
+            <input
+              type="search"
+              id="search"
+              class="searchInput w-full max-w-full bg-[#e9e9e9] px-2.5 py-1.5 rounded-[5px] border-0"
+              placeholder="창천동 근처에서 검색"
+            />
+          </fieldset>
+        </form>
+      </div>
+
+      <div class="searchContent max-w-xs h-[inherit] relative">
         <h2 class="a11yHidden">많이 찾는 검색어</h2>
-        <p class="searchRecommend">친구들이 많이 찾고 있어요!</p>
-        <ul class="searchList">
+        <p class="searchRecommend text-sm font-semibold leading-[1.5%] pl-3 py-3">
+          친구들이 많이 찾고 있어요!
+        </p>
+        <ul class="searchList flex justify-start items-stretch gap-x-1 mt-3 pl-3">
           <li class="searchItem">
-            <button type="button" class="searchKeyword">노트북</button>
+            <button
+              type="button"
+              class="searchKeyword text-[0.625rem] leading-[160%] px-2.5 py-1.5 rounded-[1.25rem] border border-[#919191]"
+            >
+              노트북
+            </button>
           </li>
           <li class="searchItem">
-            <button type="button" class="searchKeyword">노트북 거치대</button>
+            <button
+              type="button"
+              class="searchKeyword text-[0.625rem] leading-[160%] px-2.5 py-1.5 rounded-[1.25rem] border border-[#919191]"
+            >
+              노트북 거치대
+            </button>
           </li>
           <li class="searchItem">
-            <button type="button" class="searchKeyword">키보드</button>
+            <button
+              type="button"
+              class="searchKeyword text-[0.625rem] leading-[160%] px-2.5 py-1.5 rounded-[1.25rem] border border-[#919191]"
+            >
+              키보드
+            </button>
           </li>
           <li class="searchItem">
-            <button type="button" class="searchKeyword">마우스</button>
+            <button
+              type="button"
+              class="searchKeyword text-[0.625rem] leading-[160%] px-2.5 py-1.5 rounded-[1.25rem] border border-[#919191]"
+            >
+              마우스
+            </button>
           </li>
           <li class="searchItem">
-            <button type="button" class="searchKeyword">헤드셋</button>
+            <button
+              type="button"
+              class="searchKeyword text-[0.625rem] leading-[160%] px-2.5 py-1.5 rounded-[1.25rem] border border-[#919191]"
+            >
+              헤드셋
+            </button>
           </li>
         </ul>
-
-        <button type="submit" class="submitButton">완료</button>
+      </div>
+      <div class="fixed inset-0 max-w-[320px] mx-auto">
+        <button
+          type="submit"
+          class="submitButton leading-normal text-sm text-[#5A85EE] absolute border-0 right-4 bottom-[255px] bg-[transparent]"
+        >
+          완료
+        </button>
+        <img
+          src="./../../assets/images/iOS.svg"
+          alt="ios 키보드"
+          class="w-[320px] h-[248px] absolute bottom-0 left-0 right-0 mx-auto"
+        />
       </div>
     </main>
   </body>
