--- a/client/css/main.css
+++ b/client/css/main.css
@@ -563,6 +563,10 @@ video {
   position: sticky;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -719,6 +723,34 @@ video {
   bottom: 85px;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.top-\[-48px\] {
+  top: -48px;
+}
+
+.top-\[48px\] {
+  top: 48px;
+}
+
+.bottom-\[248px\] {
+  bottom: 248px;
+}
+
+.bottom-\[260px\] {
+  bottom: 260px;
+}
+
+.bottom-\[255px\] {
+  bottom: 255px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -778,6 +810,14 @@ video {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .inline-block {
@@ -842,6 +882,18 @@ video {
 
 .h-auto {
   height: auto;
+}
+
+.h-\[18px\] {
+  height: 18px;
+}
+
+.h-\[inherit\] {
+  height: inherit;
+}
+
+.h-\[248px\] {
+  height: 248px;
 }
 
 .w-12 {
@@ -912,6 +964,30 @@ video {
   width: 105px;
 }
 
+.w-\[18px\] {
+  width: 18px;
+}
+
+.w-\[calc\(100\%_-_3rem\)\] {
+  width: calc(100% - 3rem);
+}
+
+.w-\[calc\(100\%_-_1\.25rem\)\] {
+  width: calc(100% - 1.25rem);
+}
+
+.w-\[calc\(100\%_-_1rem\)\] {
+  width: calc(100% - 1rem);
+}
+
+.w-\[calc\(100\%_-_0\.25rem\)\] {
+  width: calc(100% - 0.25rem);
+}
+
+.w-\[calc\(100\%_-_1\.125rem\)\] {
+  width: calc(100% - 1.125rem);
+}
+
 .max-w-full {
   max-width: 100%;
 }
@@ -920,8 +996,20 @@ video {
   max-width: 20rem;
 }
 
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .grow {
@@ -1031,6 +1119,11 @@ video {
        column-gap: 0.5rem;
 }
 
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
 .overflow-auto {
   overflow: auto;
 }
@@ -1049,6 +1142,14 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-\[5px\] {
+  border-radius: 5px;
+}
+
+.rounded-\[1\.25rem\] {
+  border-radius: 1.25rem;
 }
 
 .rounded-t-lg {
@@ -1083,6 +1184,15 @@ video {
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-\[\#919191\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(145 145 145 / var(--tw-border-opacity));
+}
+
+.border-\[solid\] {
+  border-color: solid;
 }
 
 .border-b-\[\#bdbdbd\] {
@@ -1143,12 +1253,30 @@ video {
   background-color: ;
 }
 
+.bg-\[\#e9e9e9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 233 233 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[transparent\] {
+  background-color: transparent;
+}
+
 .bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/hamburger\.svg\'\)\] {
   background-image: url('./../../assets/icons/Icon/hamburger.svg');
 }
 
 .bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/sprite\.svg\'\)\] {
   background-image: url('./../../assets/icons/Icon/sprite.svg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/dircetionLeft\.svg\'\)\] {
+  background-image: url('./../../assets/icons/Icon/dircetionLeft.svg');
 }
 
 .bg-\[-106px_-91px\] {
@@ -1274,6 +1402,21 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1324,6 +1467,22 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+.pb-14 {
+  padding-bottom: 3.5rem;
 }
 
 .text-center {
@@ -1412,6 +1571,14 @@ video {
   line-height: 1.5;
 }
 
+.leading-\[1\.5\%\] {
+  line-height: 1.5%;
+}
+
+.leading-\[160\%\] {
+  line-height: 160%;
+}
+
 .text-\[\#9da184\] {
   --tw-text-opacity: 1;
   color: rgb(157 161 132 / var(--tw-text-opacity));
@@ -1439,6 +1606,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#008f22\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 143 34 / var(--tw-text-opacity));
+}
+
+.text-\[\#5A85EE\] {
+  --tw-text-opacity: 1;
+  color: rgb(90 133 238 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
